# cli-todo-list-rs

./: Cargo.toml  README.md  first_json.json  note.txt
src/: .main.rs.swp  Cli.rs  DateTimeInfo.rs  Status.rs  Table.rs  Task.rs  TaskJson.rs  TodoList.rs  first_json.json  lib.rs  main.rs
tests/: datetime_info.rs  task.rs  task_json.rs  todo_list.rs
